syntax = "proto3";

package user_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/travacry/auth/pkg/user_v1;user_v1";

service UserV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (google.protobuf.Empty);
}

message UpdateUserInfo {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
  Role role = 4;
}

enum Role {
  unknown = 0;
  admin = 1;
  user = 2;
}

message User {
  int64 id = 1;
  UserInfo info = 2;
  google.protobuf.Timestamp create_at = 3;
  google.protobuf.Timestamp update_at = 4;
}

message UserInfo {
  string name = 1;
  string email = 2;
  Role role = 3;
}

message CreateRequest {
  UserInfo info = 1;
  string password = 2;
  string password_confirm = 3;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  User user = 1;
}

message UpdateRequest {
  UpdateUserInfo info = 1;
}

message DeleteRequest {
  int64 id = 1;
}
